--- a/frontend/src/main/frontend/src/app/main/associados/associados.scss
+++ b/frontend/src/main/frontend/src/app/main/associados/associados.scss
@@ -211,35 +211,12 @@
     }
 }
 
-div.item p.pagamentoAssociado{
-    margin-left: 60px;
-    margin-right: 30px;
-    width: 70px;
+div.item p.telefone {
+  position: relative;
+  left: 60px;
 }
 
-div.item p.valorAssociado{
-
-    width: 70px;
-}
-
-div.item p.nomeAssociado{
-    margin-right: 45px;
-    width: 200px;
-}
-
-div.item p.cpfAssociado{
-
-    margin-right: 65px;
-    width: 70px;
-}
-
-
-div.item p.telefone{
-    width: 70px;
-}
-
-div.item p.emailAssociado{
-    margin-left: -90px;
-    margin-right: 70px;
-    width: 150px;
+div.item p.emailAssociado {
+    position: relative;
+    right: 60px;
 }
