Fix aluno birth date on turma dialog if dialog is closed with 'ESC'

--- a/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
@@ -1,5 +1,5 @@
 <!-- DIALOG -->
-<md-dialog class="turma-dialog">
+<md-dialog class="turma-dialog" ng-keydown="vm.fecharDialog($event)">
 
   <form name="TurmaForm" class="md-inline-form" novalidate>
 
