--- a/frontend/src/main/frontend/src/app/main/esqueciSenha/esqueciSenha.html
+++ b/frontend/src/main/frontend/src/app/main/esqueciSenha/esqueciSenha.html
@@ -1,8 +1,9 @@
 <div id="forgot-password" class="flex-scrollable" layout="column" ms-scroll>
     <div id="forgot-password-form-wrapper" layout="column" layout-align="center center">
         <div id="forgot-password-form" class="md-whiteframe-8dp">
-            <div class="logo md-accent-bg">
-                <span>E</span>
+            <div class="">
+                <img src="../../../assets/logos/ebm_110.png" alt="Educandario Bezerra de Menezes">
+                <!-- <span>E</span> -->
             </div>
 
             <div class="title">Restabelecer sua senha para o padrão</div>
