--- a/frontend/src/main/frontend/src/app/main/educador/educador.html
+++ b/frontend/src/main/frontend/src/app/main/educador/educador.html
@@ -72,114 +72,113 @@
       <md-list class="educadores-list">
         <md-subheader class="md-no-sticky md-white-bg">
           <div layout="row" layout-align="space-between center">
+
             <div class="list-title" layout="row" layout-align="space-between center" ng-hide="editGroupForm.$visible">
               <span ng-if="vm.listType === 'all'">Educadores Cadastrados</span>
               <span ng-if="filteredEducadores.length" class="secondary-text educadores-count">
                   ({{filteredEducadores.length}})</span>
-
             </div>
 
-            <span class="ordenar">Ordenar</span>
+            <div>
+              <span class="ordenar">Ordenar</span>
+              <md-menu>
+                <md-button class="md-icon-button" aria-label="Ordenar">
+                  <md-icon md-font-icon="icon-sort-alphabetical" ng-click="$mdOpenMenu($event)"></md-icon>
+                </md-button>
 
-            <md-menu>
-              <md-button class="md-icon-button" aria-label="Ordenar">
-                <md-icon md-font-icon="icon-sort-alphabetical" ng-click="$mdOpenMenu($event)"></md-icon>
-              </md-button>
+                <md-menu-content width="3">
 
-              <md-menu-content width="3">
+                  <md-menu-item>
+                    <md-button ng-click="vm.listOrder = 'nome'; vm.listOrderAsc = false" ng-style="vm.listOrder === 'nome' && vm.listOrderAsc=== false && {'font-weight':'500'}">
+                      <span>Nome</span>
+                      <small>(A até Z)</small>
+                    </md-button>
+                  </md-menu-item>
 
-                <md-menu-item>
-                  <md-button ng-click="vm.listOrder = 'nome'; vm.listOrderAsc = false" ng-style="vm.listOrder === 'nome' && vm.listOrderAsc=== false && {'font-weight':'500'}">
-                    <span>Nome</span>
-                    <small>(A até Z)</small>
-                  </md-button>
-                </md-menu-item>
+                  <md-menu-item>
+                    <md-button ng-click="vm.listOrder = 'nome'; vm.listOrderAsc = true" ng-style="vm.listOrder === 'nome' && vm.listOrderAsc=== true && {'font-weight':'500'}">
+                      <span>Nome</span>
+                      <small>(Z até A)</small>
+                    </md-button>
+                  </md-menu-item>
 
-                <md-menu-item>
-                  <md-button ng-click="vm.listOrder = 'nome'; vm.listOrderAsc = true" ng-style="vm.listOrder === 'nome' && vm.listOrderAsc=== true && {'font-weight':'500'}">
-                    <span>Nome</span>
-                    <small>(Z até A)</small>
-                  </md-button>
-                </md-menu-item>
+                  <md-menu-item>
+                    <md-button ng-click="vm.listOrder = 'cpf'; vm.listOrderAsc = false" ng-style="vm.listOrder === 'cpf' && vm.listOrderAsc=== false && {'font-weight':'500'}">
+                      <span>CPF</span>
+                      <small>(Crescente)</small>
+                    </md-button>
+                  </md-menu-item>
 
-                <md-menu-item>
-                  <md-button ng-click="vm.listOrder = 'cpf'; vm.listOrderAsc = false" ng-style="vm.listOrder === 'cpf' && vm.listOrderAsc=== false && {'font-weight':'500'}">
-                    <span>CPF</span>
-                    <small>(Crescente)</small>
-                  </md-button>
-                </md-menu-item>
+                  <md-menu-item>
+                    <md-button ng-click="vm.listOrder = 'cpf'; vm.listOrderAsc = true" ng-style="vm.listOrder === 'cpf' && vm.listOrderAsc=== true && {'font-weight':'500'}">
+                      <span>CPF</span>
+                      <small>(Decrescente)</small>
+                    </md-button>
+                  </md-menu-item>
 
-                <md-menu-item>
-                  <md-button ng-click="vm.listOrder = 'cpf'; vm.listOrderAsc = true" ng-style="vm.listOrder === 'cpf' && vm.listOrderAsc=== true && {'font-weight':'500'}">
-                    <span>CPF</span>
-                    <small>(Decrescente)</small>
-                  </md-button>
-                </md-menu-item>
+                </md-menu-content>
 
-              </md-menu-content>
+              </md-menu>
+             </div>
+            </div>
 
-            </md-menu>
-
-          </div>
-
-          <div class="atributos" layout-align="space-around end">
-            <label>Nome</label>
-            <label>CPF</label>
-            <label>Telefone</label>
-            <label>Email</label>
-          </div>
-        </md-subheader>
+            <div class="atributos" layout-align="space-around end">
+              <label>Nome</label>
+              <label hide show-gt-xs>CPF</label>
+              <label hide show-gt-xs>Telefone</label>
+              <label hide show-gt-xs>Email</label>
+            </div>
+          </md-subheader>
 
 
 
-        <md-list-item class="educador-item md-white-bg" md-ink-ripple ng-repeat="educador in vm.educadores | filter: vm.search | filter: global.search | filterByIds:vm.filterIds |  orderBy: vm.listOrder :vm.listOrderAsc | filter:query as filteredEducadores track by educador.nome"
-          ng-click="vm.openEducadorDialog($event, educador)" ng-style="{'transform': 'translate3d(0px, '+$index * 100+'%, 0px)', 'z-index': filteredEducadores.length - $index}" ng-class="{'selected': vm.isSelected(educador)}">
+          <md-list-item class="educador-item md-white-bg" md-ink-ripple ng-repeat="educador in vm.educadores | filter: vm.search | filter: global.search | filterByIds:vm.filterIds |  orderBy: vm.listOrder :vm.listOrderAsc | filter:query as filteredEducadores track by educador.nome"
+            ng-click="vm.openEducadorDialog($event, educador)" ng-style="{'transform': 'translate3d(0px, '+$index * 100+'%, 0px)', 'z-index': filteredEducadores.length - $index}" ng-class="{'selected': vm.isSelected(educador)}">
 
-          <md-checkbox ng-checked="vm.exists(educador, vm.selectedEducadores)" ng-click="vm.toggleSelectEducador(educador, $event)" aria-label="{{vm.exists(educador, vm.selectedEducadores) ? 'Deselect' : 'Select'}}">
-          </md-checkbox>
-          <div class="item">
+            <md-checkbox ng-checked="vm.exists(educador, vm.selectedEducadores)" ng-click="vm.toggleSelectEducador(educador, $event)" aria-label="{{vm.exists(educador, vm.selectedEducadores) ? 'Deselect' : 'Select'}}">
+            </md-checkbox>
+            <div class="item" flex>
 
-          <p class="text-truncate font-weight-20 texto nomeEducador">
-            {{educador.nome}}
-          </p>
+            <p class="text-truncate font-weight-20 texto nomeEducador" flex="50">
+              {{educador.nome}}
+            </p>
 
-          <p class="hide show-gt-xs numero cpfEducador">
-            {{educador.cpf}}
-          </p>
+            <p class="hide show-gt-xs cpfEducador" flex="75">
+              {{educador.cpf}}
+            </p>
 
-          <p class="hide show-gt-xs numero telefone">
-            {{educador.telefone}}
-          </p>
+            <p class="hide show-gt-xs telefone" flex="100">
+              {{educador.telefone}}
+            </p>
 
-          <p class="hide show-gt-sm texto emailEducador">
-            {{educador.email}}
-          </p>
-
-        </div>
-          <div class="md-secondary actions" layout="row" layout-align="start center">
-
-            <md-menu>
-              <md-button class="md-icon-button" aria-label="Mais">
-                <md-icon md-font-icon="icon-dots-vertical" ng-click="$mdOpenMenu($event)"></md-icon>
-              </md-button>
-
-              <md-menu-content width="3">
-                <md-menu-item>
-                  <md-button ng-click="vm.openEducadorDialog($event, educador)">
-                    Editar educador
-                  </md-button>
-                </md-menu-item>
-
-                <md-menu-item>
-                  <md-button ng-click="vm.deleteEducadorConfirm(educador, ev)">
-                    Apagar educador
-                  </md-button>
-                </md-menu-item>
-
-              </md-menu-content>
-            </md-menu>
+            <p class="hide show-gt-xs emailEducador" flex="30">
+              {{educador.email}}
+            </p>
 
           </div>
+            <div class="md-secondary actions" layout="row" layout-align="start center">
+
+              <md-menu>
+                <md-button class="md-icon-button" aria-label="Mais">
+                  <md-icon md-font-icon="icon-dots-vertical" ng-click="$mdOpenMenu($event)"></md-icon>
+                </md-button>
+
+                <md-menu-content width="3">
+                  <md-menu-item>
+                    <md-button ng-click="vm.openEducadorDialog($event, educador)">
+                      Editar educador
+                    </md-button>
+                  </md-menu-item>
+
+                  <md-menu-item>
+                    <md-button ng-click="vm.deleteEducadorConfirm(educador, ev)">
+                      Apagar educador
+                    </md-button>
+                  </md-menu-item>
+
+                </md-menu-content>
+              </md-menu>
+            </div>
 
         </md-list-item>
 
