--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.html
@@ -175,13 +175,13 @@
           <md-checkbox ng-checked="vm.exists(data, vm.selectedAlunos)" ng-click="vm.toggleSelectAluno(data, $event)" aria-label="{{vm.exists(data, vm.selectedAlunos) ? 'Deselect' : 'Select'}}">
           </md-checkbox>
           <div class="item" layout="row" flex>
-            <p hide show-gt-xs class="numero raAluno" flex="5">
+            <p hide show-gt-xs class="raAluno" flex="20">
               {{data.aluno.ra}}
             </p>
-            <p class="texto nomeAluno">
+            <p class=" nomeAluno" flex="40">
               {{data.aluno.nome}}
             </p>
-            <p hide show-gt-xs class="texto dataNascAluno" flex="15">
+            <p hide show-gt-xs class="texto dataNascAluno" flex="35">
               {{data.aluno.dataNascimento | date : "dd/MM/yyyy"}}
             </p>
             <p hide show-gt-xs flex="10">
