--- a/frontend/src/main/frontend/src/app/main/usuario/usuario.html
+++ b/frontend/src/main/frontend/src/app/main/usuario/usuario.html
@@ -145,23 +145,23 @@
           </md-checkbox>
           <div class="item" layout="row" flex>
 
-            <p class="text-truncate font-weight-600 texto usuario">
+            <p class="text-truncate font-weight-600 texto usuario" flex="20">
               {{usuario.nome}}
             </p>
 
-            <p class="hide show-gt-xs texto email">
+            <p class="hide show-gt-xs texto email" flex="40">
               {{usuario.email}}
             </p>
 
-            <p class="hide show-gt-xs texto setor">
+            <p class="hide show-gt-xs texto setor" flex="30">
               {{usuario.setor}}
             </p>
 
-            <p ng-show="usuario.ativo == true" class="hide show-gt-xs texto ativo">
+            <p ng-show="usuario.ativo == true" class="hide show-gt-xs texto ativo" flex="10">
               Ativado
             </p>
 
-            <p ng-show="usuario.ativo == false" class="hide show-gt-xs texto usuario ativo">
+            <p ng-show="usuario.ativo == false" class="hide show-gt-xs texto usuario ativo" flex="20">
               Desativado
             </p>
           </div>
