turns usuario email into a required field

--- a/frontend/src/main/frontend/src/app/main/usuario/dialogs/usuario/usuario-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/usuario/dialogs/usuario/usuario-dialog.html
@@ -37,7 +37,7 @@
       <md-input-container class="md-icon-float md-block">
         <label>E-mail</label>
         <md-icon md-font-icon="icon-email"></md-icon>
-        <input ng-model="vm.usuario.email" type="email">
+        <input ng-model="vm.usuario.email" type="email" required>
       </md-input-container>
 
       <md-input-container class="md-icon-float md-block">
